# ELO

./: README.md
.github/workflows/: codeql.yml  pylint.yml
ELO/: pyproject.toml
ELO/src/: main.py
assistant/: .gitignore  README.md  pyproject.toml
assistant/assistant/: __init__.py
diagrams/: .$elo_component_arch_v1.drawio.bkp  elo_component_arch_v1.drawio
embedded/: README.md
ui/: README.md  pyproject.toml
