[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Roderick Bishop <rbbishop11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.1"
pyttsx4 = "^3.0.15"
pyaudio = "^0.2.14"
setuptools = "^69.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
