[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "First iteration of personal assistant"
authors = ["Roderick Bishop <rbbishop11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.1"
pyttsx4 = "^3.0.15"
pyaudio = "^0.2.14"
setuptools = "^69.1.1"
openai = "^1.12.0"
elevenlabs = "^0.2.27"
pygame = "^2.5.2"
exa-py = "^1.0.8"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"